hphp/hack/test/enum_class_label/typing/enum_class2.php.exp
File "enum_class2.php", line 25, characters 18-21:
An enum class label is required here, not a class constant projection. (Typing[4397])
File "enum_class2.php", line 26, characters 8-9:
Enum class label/member mismatch (Typing[4110])
  File "enum_class2.php", line 13, characters 15-31:
  Expected a value of type HH\MemberOf<E, C>
  File "enum_class2.php", line 26, characters 8-9:
  But got an enum class label: `#A`
